# polymarket-agents

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  config.yaml  pyproject.toml
docs/: QUICKSTART.md
src/: __init__.py
src/bot/: __init__.py  base.py  config.py  database.py  portfolio.py
src/domains/: __init__.py
src/domains/cricket/: __init__.py  bot.py  constants.py  prompts.py  scanner.py
src/mcp/: __init__.py  base.py  cricket.py
src/polymarket/: __init__.py  clob.py  gamma.py  models.py  utils.py
src/strategies/: __init__.py  base.py  llm.py
tests/: test_bot_one_cycle.py  test_openrouter.py
